[package]
name = "gkeys-rs"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "G-Key macro daemon using hidraw"
authors = ["Chris Sutcliff <chris@sutcliff.me>"]

[dependencies]
anyhow = "1"
nix = { version = "0.30", features = ["ioctl", "fs", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
log = "0.4"
env_logger = "0.11"
dirs = "6"
ctrlc = "3"
evdev = "0.12"

[profile.release]
lto = true
strip = true
